# C-Mini-Projekt

./: CMakeLists.txt  CMakeSettings.json  README.md  install_and_run_project.sh
include/: felder_2d.h  input_int.h  oberflaeche.h  schiffe_versenken.h  spieler.h
src/: felder_2d.c  input_int.c  main.c  oberflaeche.c  schiffe_versenken.c
